--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -1,5 +1,119 @@
 //This is the .cfg for all MM changes to existing parts for KSP to Mars.
-//Contributors:  Charlie_Zulu, [add your name here]
+//Contributors:  Charlie_Zulu, Saabstory88, [add your name here]
+
+
+@PART[ksptm_aj_11]:FOR[KSPtM]
+{
+	@MODULE[ModuleEngines*]
+	{
+		%maxThrust = 165
+		%minThrust = 149
+		%heatProduction = 100
+		@atmosphereCurve
+		{
+			@key,0 = 0 319
+			@key,1 = 1 237
+		}
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Aerozine50
+			@ratio = 0.472
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = NTO
+			@ratio = 0.528
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = -1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = Aerozine50
+			amount = 0.502
+		}
+		IGNITOR_RESOURCE
+		{
+			name = NTO
+			amount = 0.498
+		}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 3
+	}
+	!MODULE[ModuleAlternator]
+	{
+	}
+	!MODULE[ModuleJettison]
+	{
+	}
+	!RESOURCE[ElectricCharge]
+	{
+	}
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		origMass = 0.45
+		configuration = AJ11
+		modded = false
+		CONFIG
+		{
+			name = AJ11
+			maxThrust = 165
+			minThrust = 149
+			PROPELLANT
+			{
+				name = Aerozine50
+				ratio = 0.472
+				DrawGauge = true
+			}
+			PROPELLANT
+			{
+				name = NTO
+				ratio = 0.528
+			}
+			atmosphereCurve
+			{
+				key = 0 319
+				key = 1 237
+			}
+		}
+	}
+}
+
+@PART[ksptm_aj_11]:FOR[KSPtM]
+{
+	PLUME
+	{
+			name = Hypergolic-Lower
+			transformName = thrustTransform
+			localRotation = 0,0,0
+			localPosition = 0,0,1.75
+			plumePosition = 0,0,0
+			fixedScale = 1.5
+			energy = 0.4
+			speed = 3
+	}
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+		@CONFIG,*
+		{
+			%powerEffectName = Hypergolic-Lower
+		}
+	}
+}
 
 @PART[Engineer*]:FOR[KSPtM]
 //Removal of all Kerbal Engineer Redux parts from the part list and tech tree
@@ -84,7 +198,7 @@ RESOURCE_DEFINITION
     isTweakable = true
 }
 
-RTGFUELCONFIG 
+RTGFUELCONFIG
 {
 	//Add Pu-238 for JDiminishingRTG
     name     = Plutonium238 // MUST have matching name in RESOURCE_DEFINITION
@@ -99,9 +213,9 @@ RTGFUELCONFIG
     !MODULE[ModuleGenerator] {}
 	@MODULE[ModuleDiminishingRTG]
     {
-        @efficiency = 0.065416667 // factor (0..1) of 'pep' into ElectricCharge 
+        @efficiency = 0.065416667 // factor (0..1) of 'pep' into ElectricCharge
         @volume = 1.68626061   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
-		
+
     }
 }
 
@@ -112,8 +226,8 @@ RTGFUELCONFIG
 }
 
 @PART[TaurusHCV]:FOR[KSPTM]:AFTER[RealismOverhaul]
-{	
-	//Add CoMShifter for Re-entry.  I'd personally rather do this with fuel tanks and actual ballast, but we can work on that later.  
+{
+	//Add CoMShifter for Re-entry.  I'd personally rather do this with fuel tanks and actual ballast, but we can work on that later.
 	+MODULE
 	{
 		+name = CoMShifter
@@ -208,21 +322,21 @@ RTGFUELCONFIG
 	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@maxtemp = 1300
 	@CrewCapacity = 4
-	
+
 }
 
 +PART[rtg]:FINAL
 {
 	@name = TestGPHS_RTG
-	@title = GPHS RTG 
+	@title = GPHS RTG
 	//JDiminishingRTG support for MHW-RTG
 	@mass = 0.04875 //37.7kg-4.5kg
     !MODULE[ModuleGenerator] {}
 	@MODULE[ModuleDiminishingRTG]
     {
-        @efficiency = 0.068181818  // factor (0..1) of 'pep' into ElectricCharge 
+        @efficiency = 0.068181818  // factor (0..1) of 'pep' into ElectricCharge
         @volume = 3.091477785   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
-		
+
     }
 }
 
@@ -241,7 +355,7 @@ RTGFUELCONFIG
 	@attachRules = 1,1,1,0,0
 
 	@mass = 0.008
-	
+
 	!MODULE[ModuleEngines*]
 	{
 	}
@@ -279,7 +393,7 @@ RTGFUELCONFIG
 	}
 	@name = KSPtMorbiterWRS
 	@title = KSPtM Orbiter WRS
-	@description = KSPtM ODT WRS.  
+	@description = KSPtM ODT WRS.
 	@mass = 8
 	@scale = 1.722222
 	@MODULE[TacGenericConverter]
@@ -301,7 +415,7 @@ RTGFUELCONFIG
 	}
 	@name = KSPtMorbiterCDRA
 	@mass = 0.6
-	@description = KSPtM ODT CDRA.  Uses a 4-bed molecular sieve.  
+	@description = KSPtM ODT CDRA.  Uses a 4-bed molecular sieve.
 	@MODULE[TacGenericConverter]
 	{
 		@conversionRate = 1.0	// Already set at 4 people
@@ -372,7 +486,7 @@ RTGFUELCONFIG
 	%RSSROConfig = True
 	@name = KSPtMascentTankMAV
 	@title = KSPtM MAV Ascent Fuel Tank
-	@description = KSPtM MAV Ascent Fuel Tank. 
+	@description = KSPtM MAV Ascent Fuel Tank.
 	@mass = 0.072
 	+rescaleFactor = 4.8
 	!RESOURCE[*]
@@ -384,7 +498,7 @@ RTGFUELCONFIG
 		volume = 1250
 		basemass = -1
 		type = ServiceModule
-		
+
 	}
 }
 +PART[Antennacomtec1]:FOR[KSPtM]
@@ -393,7 +507,7 @@ RTGFUELCONFIG
 	%RSSROConfig = True
 	@name = KSPtMantennaDishMAV
 	@title = KSPtM MAV High Gain Antenna
-	@description = KSPtM MAV High Gain Antenna 
+	@description = KSPtM MAV High Gain Antenna
 	@mass = 0.02
 	MODULE[ModuleRTAntenna]
 	{
@@ -428,7 +542,7 @@ RTGFUELCONFIG
 	@node_stack_top1 = 0.0, 1.48, 0, 0.0, 1.0, 0.0, 1
 	@node_stack_bottom = 0.0, -3.2, 0.0, 0.0, -1.0, 0.0, 2
 	@category = Propulsion
-	@title = RL60 
+	@title = RL60
 	@manufacturer = Pratt & Whitney
 	@description = Next generation cryogenic upper stage engine designed to replace the RL10, providing higher performance while maintaining the same installation envelope.  Also available in a lower 180kN thrust Vinci-180 model.
 	@attachRules = 1,0,1,0,0
@@ -516,7 +630,7 @@ RTGFUELCONFIG
 @PART[RD171]:FINAL
 {
 	%rescaleFactor = 0.92
-	
+
 }
 
 //Add plumes to cluster for NovaPunch
